trying to solve why horizontal scroll works

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     background-position: center;
     background-repeat: repeat;
     background-size: auto 100%;
+    width: max-content;
 }
 
 .container {
